# Github-Evaluator

./: .env.example  .gitignore  Dockerfile  README.md  generate_diagram.py  interim_report.md  pyproject.toml  read_state.py
audit/: calibration_bad_repo_report.md  final_assessment_report.md  final_audit_report.md  video_demo_transcript.md
audit/report_bypeer_received/: report.json  report.md
audit/report_onpeer_generated/: report.md
audit/report_onself_generated/: report.md
src/: graph.py  rubric.json  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
