[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Automaton Auditor FDE Challenge Week 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "langsmith>=0.1.0",
    "docling>=2.0.0",
    "tenacity>=9.0.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0"
]
